--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,11 @@
     <!-- General -->
     <skip />
 
+    <!-- NoxLauncher -->
+
+    <string name="folder_tools">Tools</string>
+
+
     <!-- Application name -->
     <string name="app_name">Launcher3</string>
     <!-- Default folder name -->
