长按操作入口ui

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,9 @@
     <!-- NoxLauncher -->
 
     <string name="folder_tools">Tools</string>
+    <string name="app_info">App Info</string>
+    <string name="export_apk">Export APK</string>
+    <string name="uninstall">Uninstall</string>
 
 
     <!-- Application name -->
