--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
     <!-- General -->
     <skip />
 
-    <!-- NoxLauncher -->
+    <!-- edit by candice begin -->
 
 
     <string name="folder_tools">Tools</string>
@@ -30,6 +30,7 @@
     <string name="uninstall">Uninstall</string>
 
     <string name="search_hint">Search for games and apps...</string>
+    <!-- edit by candice end -->
 
 
     <!-- Application name -->
